# Omnix-CLI

./: CODEX.md  GEMINI.md  README.md
ai-cli/: .gitignore  README.md  pyproject.toml
ai-cli/aicli/: __init__.py
ai-cli/aicli/blueprint/: __init__.py  evolution.py  validation.py
ai-cli/aicli/cli/: main.py
ai-cli/aicli/core/: exceptions.py  settings.py  state_manager.py
ai-cli/aicli/memory/: __init__.py  memory_manager.py
ai-cli/aicli/providers/: __init__.py  anthropic.py  base.py  deepseek.py  exceptions.py  google.py  openai.py  openrouter.py  registry.py
ai-cli/aicli/schemas/: __init__.py  audit.py  blueprint.py  memory.py  models.py
ai-cli/docs/: phase-0.md  phase-1.md  phase-2.md  phase-3.md
ai-cli/omnix_cli/: __init__.py
ai-cli/omnix_cli/agents/: __init__.py
ai-cli/omnix_cli/blueprint/: __init__.py  evolution.py  validation.py
ai-cli/omnix_cli/cli/: main.py
ai-cli/tests/: __init__.py  test_architect_agent.py  test_artifact_commands.py  test_autonomous_orchestrator.py  test_backend_agent.py  test_blueprint_commands.py  test_context_builder.py  test_database_agent.py  test_decision_detection.py  test_execute_command.py  test_execution_coordinator.py  test_frontend_agent.py  test_goal_detection.py  test_integration_agent.py  test_integration_commands.py  test_master_agent.py  test_memory_command.py  test_memory_manager.py  test_phase0_cli.py  test_ping.py  test_planner_agent.py  test_provider_config.py  test_qa_agent.py  test_qa_commands.py  test_registry.py  test_repair_agent.py  test_routing_agent.py  test_settings.py  test_task_commands.py
(+125 files in other folders)
